--- a/ShaiRandom.TroschuetzCompat/ShaiRandom.TroschuetzCompat.csproj
+++ b/ShaiRandom.TroschuetzCompat/ShaiRandom.TroschuetzCompat.csproj
@@ -54,6 +54,9 @@
 
     <!-- Generate documentation files for all configurations since Debug and Release are published to NuGet. -->
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
+    <!-- Since we explicitly support .NET 5.0 as one (of many) targets, suppress the warning about .NET 5 being at end of life. -->
+    <CheckEolTargetFramework Condition="$(TargetFramework.StartsWith('net5.0')) == true">false</CheckEolTargetFramework>
   </PropertyGroup>
 
   <!-- Define trace constant for debug builds. -->
@@ -87,7 +90,7 @@
 
   <!-- Dependencies -->
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="6.0.0">
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="7.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
