--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
+        dotnet-version: 6.0.428
         dotnet-version: 9.0.101
     - name: Install dependencies
       run: dotnet restore
