--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.428
-        dotnet-version: 9.0.101
+        dotnet-version: |
+          6.0.x
+          9.0.x
     - name: Install dependencies
       run: dotnet restore
     - name: Build
